src/objects/SignupRequest.object
<CustomObject>
    <fields>
        <fullName>Create_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Signup Requests</relationshipLabel>
        <relationshipName>Signup_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>